feat: store page id of visited page on GUI close
Last visited page ID is stored on the guidebook item if appropriate, so
will be returned to when guide book is next opened.